--- a/pacemaker-skeleton-client/pom.xml
+++ b/pacemaker-skeleton-client/pom.xml
@@ -66,6 +66,14 @@
     <artifactId>gson</artifactId>
     <version>2.8.2</version>
   </dependency>
+  <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+<dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-all</artifactId>
+    <version>1.9.5</version>
+    <scope>test</scope>
+</dependency>
+  
     
   </dependencies>
 </project>
