--- a/pacemaker-skeleton-kotlin/pom.xml
+++ b/pacemaker-skeleton-kotlin/pom.xml
@@ -82,7 +82,7 @@
         <version>1.1.3</version>
         <configuration>
           <jdkVersion>1.8</jdkVersion>
-          <appName>YOUR APP NAME</appName>
+          <appName>immense-headland-47143</appName>
           <processTypes>
             <web>java -jar ./target/pacemaker-skeleton-kotlin-1.0-jar-with-dependencies.jar</web>
           </processTypes>
